--- a/src/features/wishlist/Wishlist.module.css
+++ b/src/features/wishlist/Wishlist.module.css
@@ -38,7 +38,7 @@
 
 .heading {
   text-align: center;
-  background-color: #c29957;
+  background-color: black;
   color: white;
   text-transform: uppercase;
   font-weight: 100;
