--- a/src/features/user/UserDetailed/UserDetailedPage.module.css
+++ b/src/features/user/UserDetailed/UserDetailedPage.module.css
@@ -23,7 +23,7 @@
 
 .heading {
   text-align: center;
-  background-color: #c29957;
+  background-color: black;
   color: white;
   text-transform: uppercase;
   font-weight: 100;
