--- a/src/features/product/ProductDetailedPage/ProductDetailedInfo.module.css
+++ b/src/features/product/ProductDetailedPage/ProductDetailedInfo.module.css
@@ -106,6 +106,12 @@
     padding: 20px 0;
     grid-gap: 80px;
   }
+
+  .pricing{
+    margin: 10px 0;
+    padding: 0;
+  }
+
   .description{
     border-bottom: none;
   }
